<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.contatos.ContatosFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            app:contentInsetStart="0dp"
            android:id="@+id/toolbar"
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.NeoChat">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_height="wrap_content"
                    android:text="@string/mensagens"/>

                <ImageButton
                    android:id="@+id/sairDaConta"
                    android:layout_margin="4dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_exit"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="end|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sair_da_conta" />

            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerContatos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_contato_recycler"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_contato"
        android:focusable="true"
        android:contentDescription="@string/adicionar_contato" />

</FrameLayout>